Password recovery via Steam
fixes #393